--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,15 +1,34 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bloom Scroll</title>
   </head>
-  <body  >
+  <body
+    style="
+      background-image: radial-gradient(
+        circle,
+        rgba(0, 0, 0, 1) 1%,
+        rgba(92, 0, 230, 1) 33%,
+        rgba(153, 29, 253, 1) 48%,
+        rgba(0, 255, 249, 1) 65%,
+        rgba(12, 113, 252, 1) 78%,
+        rgba(1, 1, 1, 1) 95%
+      );
+
+      background-position: center;
+      background-size: cover;
+      background-repeat: no-repeat;
+    "
+  >
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
